--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "znot",
   "version": "1.0.0",
   "description": "польская нотация для nodejs",
-  "main": "z.js",
+  "main": "index.js",
   "scripts": {
     "test": "node tests/ztest.js"
   },
